Separate app data for debug runs